--- a/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
+++ b/debug/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/preferences/DebugPreferencesMessages.properties
@@ -23,6 +23,8 @@ ConsolePreferencePage_Wrap_text_1=Fixed &width console
 ConsolePreferencePage_Console_width=&Maximum character width:
 ConsolePreferencePage_Limit_console_output_1=&Limit console output
 ConsolePreferencePage_Console_buffer_size__characters___2=Console &buffer size (characters):
+ConsolePreferencePage_Limit_console_line_length=Limit console line length (0 for no limit)
+ConsolePreferencePage_Limit_console_line_length_wrap=Wrap console line at limit
 ConsolePreferencePage_ConsoleAutoPinEnable=Pin current and the new Console views when a new Console view is opened
 ConsolePreferencePage_The_console_buffer_size_must_be_at_least_1000_characters__1=Buffer size must be between 1000 and {0} inclusive.
 ConsolePreferencePage_console_width=Character width must be between 80 and 1000 inclusive.
@@ -30,7 +32,7 @@ ConsolePreferencePage_12=Displayed &tab width:
 ConsolePreferencePage_13=Tab width must be between 1 and 100 inclusive.
 ConsolePreferencePage_11=Back&ground color:
 ConsolePreferencePage_Interpret_control_characters=Interpret ASCII &control characters
-ConsolePreferencePage_Interpret_cr_as_control_character=Interpret Carriage &Return (\\r) as control character 
+ConsolePreferencePage_Interpret_cr_as_control_character=Interpret Carriage &Return (\\r) as control character
 ConsolePreferencePage_Enable_Word_Wrap_text=E&nable word wrap
 ConsoleElapsedTimeLabel=Elapsed Time Format (Choose 'None' to disable)
 ConsoleDefaultElapsedTimeFormat=H:MM:SS
